Fixed comerciante method causing error